# metric-cli

./: .coverage  .gitignore  README.md  dev_requirements.txt  mkdocs.yml  openapi_client_README.md  pyproject.toml
.github/workflows/: docs.yml  python-package.yml
conf/: .openapi-generator-ignore  openapi_generator_config.json
docs/: design.md  index.md  known_limitations.md  reference.md  roadmap.md
docs/openapi_docs/: CustomDomainsApi.md  GoogleProtobufAny.md  IdentityStoreApi.md  MetricDefinitionsApi.md  MetricInsightsApi.md  MetricQueryApi.md  README.md  SettingsApi.md  SubscriptionsApi.md  TableauAnalyticsextensionsV1ConnectionItem.md  TableauAnalyticsextensionsV1ConnectionMapping.md  TableauAnalyticsextensionsV1ConnectionMetadata.md  TableauAnalyticsextensionsV1ConnectionMetadataList.md  TableauAnalyticsextensionsV1ServerSettings.md  TableauAuthnV1FindIdentityPoolByUuidResponse.md  TableauAuthnV1IdentityPool.md  TableauAuthnV1ListIdentityPoolsResponse.md  TableauAuthnV1OidcConfig.md  TableauAuthnV1RegisterAuthConfigurationRequest.md  TableauAuthnV1RegisterIdentityPoolRequest.md  TableauAuthnV1UUID.md  TableauAuthnV1UpdateAuthConfigurationRequest.md  TableauAuthnV1UpdateIdentityPoolRequest.md  TableauAuthnV1UpdateIdentityPoolResponse.md  TableauCustomdomainsV1DeleteSiteCustomDomainSettingsResponse.md  TableauCustomdomainsV1SiteCustomDomainSettingsRequest.md  TableauCustomdomainsV1SiteCustomDomainSettingsResponse.md  TableauEventserviceTypesV1Event.md  TableauEventserviceTypesV1SerializedEvent.md  TableauEventserviceV1EventInput.md  TableauEventserviceV1PublishRequest.md  TableauEventserviceV1PublishResponse.md  TableauEventserviceV1PublishUIEventRequest.md  TableauEventserviceV1PublishUIEventResponse.md  TableauMetricqueryserviceTypesV1BasicSpecification.md  (+72 more)
metric_transpi/: __init__.py  cli.py  dbt.py  metric.py  payload.schema.json  tableau.py  tableau_cloud.py  translate.py
metric_transpi/tests/: payload.json  (+9 more)
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
(+449 files in other folders)
